# chess-tracker

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  agents.md  docker-compose.local-db.yml  docker-compose.worker.yml  docker-compose.yml
analytics-py/: pyproject.toml
analytics-py/analytics_py/: __init__.py  __main__.py
backend-go/: .dockerignore  .env.example  Dockerfile  go.mod  go.sum
docs/: API.md  TECH_DESIGN.md
mysql/migrations/: 001_init.sql  002_games_chesscom_api.sql  003_daily_game_stats.sql  005_split_daily_stats.sql  006_daily_game_stats_single_rating.sql  007_games_dashboard_metrics.sql  008_daily_game_stats_dashboard.sql  009_metric_column_comments.sql  010_rename_avg_seconds_per_own_move.sql  011_puzzle_snapshots_and_daily.sql
scripts/: daily-compute.sh  daily-puzzle-sync.sh  deploy.sh  generate-daily-game-stats.mjs  import-json-to-mysql.mjs  init-daily-stats.mjs  manual-pull-stats.sh  migrate-pg-to-mysql.mjs  mysql-legacy-005-to-single-rating.sql  package-lock.json  package.json  rebuild-daily-stats.mjs  update-tech-design.mjs
scripts/lib/: daily-game-stats-core.mjs
supabase/: config.toml
supabase/migrations/: 20250408000000_init.sql  20250408000001_daily_stats_recorded_at_timestamptz.sql  20250408000002_leaderboard_blitz_bullet_views.sql  20250408120000_leaderboard_puzzle_view.sql  20250408140000_puzzle_current_rating.sql
web/: .gitignore  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
web/app/: error.tsx  globals.css  layout.tsx  page.tsx
(+89 files in other folders)
