[project]
name = "analytics-py"
version = "0.1.0"
description = "Phase 2: PGN parsing and analytics engine"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["analytics_py*"]
